configs/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app
  labels:
    app: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      containers:
        - name: notes-app
          image: ohsayan/jotsy:latest
          ports:
            - containerPort: 2022
