configs/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skytable-deployment
  labels:
    app: skytable-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skytable-db
  template:
    metadata:
      labels:
        app: skytable-db
    spec:
      containers:
        - name: skytable-db
          image: skytable/sdb:v0.7.6
          ports:
            - containerPort: 2003
