configs/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
spec:
  selector:
    app: notes-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 2022
      targetPort: 2022
      nodePort: 30000
