configs/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skytable-db-service
spec:
  selector:
    app: skytable-db
  ports:
    - protocol: TCP
      port: 2003
      targetPort: 2003
